Add sidebar html and task container

--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,16 @@
         <title>Todo List Application</title>
     </head>
     <body>
-        <div class='content'></div>
+        <div class='sidebar'>
+            <div>Home</div>
+            <div>Today</div>
+            <div>Upcoming</div>
+            <div>Projects</div>
+        </div>
+        <div class='content'>
+            <div class='tasks'>
+                
+            </div>
+        </div>
     </body>
 </html>
