Add google icons to sidebar links

--- a/src/template.html
+++ b/src/template.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset='utf-8'>
         <title>Todo List Application</title>
+        <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
     </head>
     <body>
         <div class='sidebar'>
-            <div>Home</div>
-            <div>Today</div>
-            <div>Upcoming</div>
-            <div>Projects</div>
+            <div><span class='material-icons' id='star'>star</span><a href='#'>Today</a></div>
+            <div><span class='material-icons' id='date-range'>date_range</span><a href='#'>Upcoming</a></div>
+            <div><span class='material-icons' id='expand-more'>expand_more</span><a href='#'>Projects</a></div>
         </div>
         <div class='content'>
             <div class='tasks'>
