Add classes to sidebar links

--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <div class='sidebar'>
-            <div><span class='material-icons' id='star'>star</span><a href='#'>Today</a></div>
-            <div><span class='material-icons' id='date-range'>date_range</span><a href='#'>Upcoming</a></div>
-            <div><span class='material-icons' id='expand-more'>expand_more</span><a href='#'>Projects</a></div>
+            <div class='today'><span class='material-icons' id='star'>star</span><a href='#'>Today</a></div>
+            <div class='upcoming'><span class='material-icons' id='date-range'>date_range</span><a href='#'>Upcoming</a></div>
+            <div class='projects'><span class='material-icons' id='expand-more'>expand_more</span><a href='#'>Projects</a></div>
         </div>
         <div class='content'>
             <div class='tasks'>
