Update sidebar ids and task content header

--- a/src/template.html
+++ b/src/template.html
@@ -7,13 +7,21 @@
     </head>
     <body>
         <div class='sidebar'>
+            <div class='home'><span class='material-icons' id='home'>home</span>Home</div>
             <div class='today'><span class='material-icons' id='star'>star</span>Today</div>
-            <div class='upcoming'><span class='material-icons' id='date-range'>date_range</span>Upcoming</div>
-            <div class='projects'><span class='material-icons' id='expand-more'>expand_more</span>Projects</div>
+            <div class='upcoming'><span class='material-icons' id='upcoming'>date_range</span>Upcoming</div>
+            <div class='projects'><span class='material-icons' id='projects'>expand_more</span>
+                Projects
+                <div class='dropdown hidden'></div>
+            </div>
         </div>
         <div class='content'>
-            <div class='tasks'>
-                
+            <div class='tasks-header'>
+                <div class='header-name'>Home</div>
+                <div class='header-date'>Due Date</div>
+            </div>
+            <div class='task-content'>
+
             </div>
         </div>
     </body>
