Add taskform popup feature

--- a/src/template.html
+++ b/src/template.html
@@ -19,9 +19,10 @@
             <div class='tasks-header'>
                 <div class='header-name'>Home</div>
                 <div class='header-date'>Due Date</div>
+                
             </div>
             <div class='task-content'>
-
+                <input type='button' class='add-task-popup'>Add Task</input>
             </div>
         </div>
     </body>
