Add features - add and remove projects

--- a/src/template.html
+++ b/src/template.html
@@ -17,12 +17,15 @@
         </div>
         <div class='content'>
             <div class='tasks-header'>
-                <div class='header-name'>Home</div>
-                <div class='header-date'>Due Date</div>
-                
+                <div class='header-text'>
+                    <div class='header-name'>Home</div>
+                    <div class='header-date'>Due Date</div>
+                </div>
+                <div class='header-buttons'>
+                    <span class='material-icons add-task-popup'>add</span>
+                </div>
             </div>
             <div class='task-content'>
-                <input type='button' class='add-task-popup'>Add Task</input>
             </div>
         </div>
     </body>
