Add datepicker for due date input

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
         <meta charset='utf-8'>
         <title>Todo List Application</title>
         <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker.min.css">
     </head>
     <body>
         <div class='sidebar'>
@@ -28,5 +29,6 @@
             <div class='task-content'>
             </div>
         </div>
+        
     </body>
 </html>
